--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-export CONNECTION_STRING="admin:12345678@tcp(bank-alfy.c5feqn9q3trc.ap-southeast-1.rds.amazonaws.com:3306)/bank?charset=utf8&parseTime=True&loc=Local"
+export CONNECTION_STRING="root:12345678@tcp(host.docker.internal:3306)/bank?charset=utf8&parseTime=True&loc=Local"
